--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"vite": "^5.4.8"
 	},
 	"dependencies": {
+		"canvas": "^2.11.2",
 		"express": "^4.21.1",
-		"multer": "1.4.5-lts.1"
+		"multer": "1.4.5-lts.1",
+		"pdfjs-dist": "^4.7.76"
 	}
 }
