--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	"dependencies": {
 		"canvas": "^2.11.2",
 		"express": "^4.21.1",
+		"mime-types": "^2.1.35",
 		"multer": "1.4.5-lts.1",
-		"pdfjs-dist": "^4.7.76"
+		"pdfjs-dist": "^4.7.76",
+		"sharp": "^0.33.5"
 	}
 }
